--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0",
-    "build": "ng build --prod --output-path docs --base-href /ds/ --deploy-url /ds/",
+    "build": "ng build --prod --output-path docs",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
